...
                android:layout_marginTop="16dp"
                android:text="@string/booktitle_prompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookImage" />

            <EditText
                android:id="@+id/bookTitleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
...
                android:layout_marginTop="16dp"
                android:text="@string/bookauthor_prompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookTitleEditText" />

            <EditText
                android:id="@+id/authorEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
...
            <Button
                android:id="@+id/scanIsbnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/scanBtnPrompt"
                app:layout_constraintBaseline_toBaselineOf="@+id/isbnEditText"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/isbnEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:layout_marginTop="16dp"
                android:text="@string/bookdesc_prompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/populateFromIsbnBtn" />

            <EditText
                android:id="@+id/descEditText"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
...

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveBookBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_anchorGravity="bottom|right|end"
...
