...
    <string name="google_maps_api_key">AIzaSyAi9_RRiwiwsIMzGs99KVEHSaueKQp_Z4k</string>

    <string name="app_name">Atheneum</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_complete_registration">Complete Registration</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <!--End of Strings for book information-->

    <!--Strings for owner page-->
    <string name="owner_page_title">Owner Page</string>
    <string-array name="ownBookSpinnerArray">
        <item>ALL</item>
        <item>AVAILABLE</item>
        <item>REQUESTED</item>
        <item>ACCEPTED</item>
        <item>BORROWED</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
...
    <!--Strings for search page-->
    <string name="search_page_title">Search</string>
    <string name="title_activity_scan_barcode">ScanBarcodeActivity</string>
    <!--End of Strings for search page-->

    <!--Strings for Add/edit/delete book tests-->
    <string name="newbooktest_title">Testbook</string>
    <string name="newbooktest_author">logintester</string>
    <string name="newbooktest_isbn">1234567890987</string>
    <string name="newbooktest_desc">Lorem ipsum dolor sit amet</string>
    <string name="editbooktest_newtitle">New Title</string>
    <string name="editbooktest_newdesc">Some different text here</string>
    <string name="title_activity_map">MapActivity</string>
    <!--End of Strings for Add/edit/delete book tests-->
...
